src/styles.scss
@use "sass:map";
@import 'variables';
@media (prefers-reduced-motion: no-preference) {
    html {
        scroll-behavior: smooth;
    }
}

// @import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200');
@import url('https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0');


@font-face {
    font-family: 'Material Symbols Outlined';
    font-style: normal;
    font-weight: 100 700;
    src: url(https://fonts.gstatic.com/s/materialsymbolsoutlined/v154/kJEhBvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oFsI.woff2) format('woff2');
}
.material-symbols-rounded {
    font-family: 'Material Symbols Rounded' !important;
    font-weight: normal !important;
    font-style: normal !important;
    // font-size: 20px !important;
    line-height: 1 !important;
    letter-spacing: normal !important;
    text-transform: none !important;
    display: inline-block !important;
    white-space: nowrap !important;
    word-wrap: normal !important;
    direction: ltr !important;
    font-feature-settings: 'liga' !important;
    -moz-font-feature-settings: 'liga' !important;
    -moz-osx-font-smoothing: grayscale !important;
}

html {
    scrollbar-width: thin;
}

a {
    color: var(--accent);
    text-decoration: wavy underline;
    &:visited {
        color: var(--secondary);
    }
}
ul {
    list-style-type: '— ';
}

p {
    text-align: start;
    text-indent: 2rem;
}

hr {
    margin: 0px 8rem;
}

*::selection {
    // background-color: var(--accent);
    // color: var(--background);
    // text-decoration-color: var(--background);
    background-color: var(--secondary20);
}

*[lang="sr"] {
    font-feature-settings: "ss05";
    font-style: italic;
}

.vollkorn-hr {
    font-feature-settings: "dlig";
    width: 100%;
    text-align: center;
}

body {
    display: flex;
    align-items: center;
    justify-content: center;

    margin: 0px;
    font-size: var(--font-size);
    line-height: 1.5;

    background-color: var(--background);
    color: var(--text);
}
body, body[font="sans"] {
    font-family: $font-sans;
    * {
        font-family: $font-sans;
    }
}
body[font="serif"] {
    font-family: $font-serif;
    * {
        font-family: $font-serif;
        // font-feature-settings: ;
        font-weight: medium;
    }
}
app-root > * {
    width: 100%;
    display: flex;
    flex-flow: column nowrap;
    justify-content: center;
    align-items: flex-start;
}
// app-settings {
//     display: block;
//     width: 80vw;
// }

*, *::before, *::after {
    box-sizing: border-box;
    transition: all 200ms ease-in-out;
}

label, button, select, summary,
[type=radio], [type=submit], [type=checkbox] {
    cursor: pointer;
}

abbr {
    cursor: help;
}

h1, h2 {
    text-align: center;
}
h1 {
    color: var(--accent-text);
    color: var(--accent);
    margin-bottom: 1rem;
    // &::selection {
    //     color: var(--text);
    // }
}
h2 {
    // color: var(--accent)-2;

    font-size: calc(var(--font-size) + 8pt);
    font-weight: 500;
    margin-top: 1rem;
    margin-bottom: 0.5rem;
    color: var(--supressed-heading);

    // &::selection {
    //     color: var(--secondary20);
    // }
}
h3 {
    color: var(--h3-heading);
}


input[type="checkbox"], select {
    font-family: inherit;
    font-size: var(--font-size);

    vertical-align: baseline;
}
input[type="checkbox"] {
    
    height: calc(var(--font-size) / 2);

    aspect-ratio: 1 / 1;
    
    vertical-align: middle;
}
select {
    margin: 0px;
    min-height: var(--font-size);
    padding: 0.5rem;
    border-radius: 0.5rem;
    background-color: var(--accent);
    color: var(--background);
    border: none;
}

button {
    background-color: var(--background);
    color: var(--text);
    padding: 0.5rem;
    border: none;
    
    font-size: calc(var(--font-size) * 0.8);
    font-weight: 500;

    &.active {
        background-color: var(--secondary20);
        color: var(--accent);
    }
}
@media (hover: hover) {
    button{

        &:hover {
            background-color: var(--secondary);
        }
        &:active:hover {
            background-color: var(--secondary);
        }
    }
}


.note {
    color: var(--h3-heading);
}


// button.accent-btn {
//     background-color: map-get(map-get($themes, light), accent);
//     color: map-get(map-get($themes, light), background);
// }
// button.primary-btn {
//     background-color: map-get(map-get($themes, light), primary);
//     color: map-get(map-get($themes, light), background);
// }
// button.secondary-btn {
//     background-color: map-get(map-get($themes, light), secondary);
//     color: map-get(map-get($themes, light), background);
// }


body[theme="light"] {
    .level-1-quiz-question-wrapper {
        >div.card-and-title-container {
            div.card-container {
                &.answer-card-container:has(> .answer-button:hover) {
                    background-color: var(--accent) !important;  // light mode override
                    > .answer-button:hover {
                        color: var(--background) !important;  // light mode override
                    }
                }
                div.card.answer-card {
                    background-color: var(--secondary20) !important;  // light mode override
                    input {
                        color: var(--text) !important;  // light mode override
                        
                        &::placeholder,
                        &::-moz-placeholder,
                        &::-webkit-input-placeholder {
                            color: var(--text) !important;  // light mode override
                            opacity: 50% !important;  // light mode override
                        }
                    }
                }
            }
        }
    }
}



// @media (min-width: 992px) {
//     main {
//         background-color: aliceblue;
//     }
// }

// @media (min-width: 768px) and (max-width: 991px) {
//     main {
//         background-color: antiquewhite;
//     }
// }

// @media (max-width: 767px) {
//     main {
//         background-color: aquamarine;
//     }
// }


// big desktop screens
@media only screen and (min-width: #{$screen-size--desktop}) {
    body {
        --font-size: 20pt;
    }
    main {
        width: #{$main-element-width--desktop};
    }
}

// smaller desktop and laptop screens
@media only screen and (min-width: $screen-size--laptop) and (max-width: #{$main-element-width--desktop}) {
    body {
        --font-size: 20pt;
    }
    main {
        width: #{$main-element-width--laptop};
    }
}

// tablet screens
@media only screen and (min-width: $main-element-width--phone) and (max-width: $main-element-width--laptop) {
    body {
        --font-size: 18pt;
        --font-size-cards: 8pt;
    }
    main {
        // width: calc(#{$main-element-width--tablet} + 12rem);
        // width: #{$main-element-width--laptop};
        width: 100%;
        padding-left: 1rem;
        padding-right: 1rem;
    }
}


app-topbar {
    left: 0;
    right: 0;

    background-color: var(--background);
}
main {
    margin-top: 5rem;
    margin-bottom: 5rem;
    padding-left: 2rem;
    padding-right: 2rem;


    // padding-left:  12rem;
    // padding-right: 12rem;

    // width: calc(100% - 20rem);
    // position: relative;
    // left: 10rem;

    // width: 100%;
}

// bigger screens
@media only screen and (min-width: $main-element-width--phone) {
    app-topbar {
        position: absolute;
        top: 0;
        bottom: unset;
        #topbar {
            >* {
                &.text {
                    display: flex;
                }
                &.icon{
                    display: none;
                }
            }
        }
    }
    ul {
        list-style-position: inside;
    }
}

// phone screens
@media only screen and (max-width: $main-element-width--phone) {
    app-topbar {
        position: fixed;
        top: unset;
        bottom: 0;
        #topbar {
            >* {
                &.text {
                    display: none;
                }
                &.icon{
                    display: flex;
                }
            }
        }
    }
    body {
        --font-size: 12pt;
        // --font-size-cards: 18pt;
        --font-size-topbar: 16pt;
    }
    p {
        text-indent: 1rem;
    }
    main {
        // width: calc(#{$main-element-width--tablet} + 12rem);
        // width: #{$main-element-width--laptop};
        max-width: 100vw;
        width: 100vw;
        margin-top: 1rem;
        margin-bottom: 5rem;
        padding-right: 1.5rem;
        padding-left: 1.5rem;
    }
    ul {
        list-style-position: outside;
    }

    body[theme="light"] {
        #topbar {
            // shadow for light mode, border for dark mode.
            // (see light mode overrides in styles.scss)
            box-shadow: 0rem 0rem 5rem var(--border);
            border-top: none;
        }
    }
}

